--- a/css/styles.css
+++ b/css/styles.css
@@ -11575,3 +11575,68 @@ footer.footer .social-link:hover {
   font-size: 2.25rem;
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
 }
+
+.images img:hover {
+  transform: scale(0.6);
+}
+
+.newmodal {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  z-index: 1;
+  overflow: auto;
+  opacity: 0;
+  pointer-events: none;
+}
+.newmodalContent {
+  min-height: 100vh;
+  transform: scale(1.5);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.newmodalImg {
+  width: 80%;
+  max-width: 700px;
+}
+.newmodalTxt {
+  margin-top: 1em;
+}
+.newclose {
+  position: absolute;
+  top: 1em;
+  right: 1.5em;
+  font-size: 1.5em;
+  cursor: pointer;
+}
+.newmodal.appear {
+  opacity: 1;
+  pointer-events: all;
+}
+.newmodal.appear .newmodalImg,
+.newmodal.appear .newmodalTxt {
+  animation: zoom 0.3s linear;
+}
+
+
+
+@keyframes zoom {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
+
+
+
+
+
